--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/PartialFilter.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/PartialFilter.cshtml
@@ -12,13 +12,13 @@
                     Matricula
                 </td>
                 <td class="itemcellValue">
-                    <input id="Tag" name="Type" type="text" class="textBox" />
+                    <input id="Tag" name="Tag" type="text" class="textBox" />
                 </td>
                 <td class="itemcell" id="lbl2">
                     Estado
                 </td>
                 <td class="itemcellValue">
-                    <input id="Status" name="Code" type="text" class="textBox" />
+                    <input id="Status" name="Status" type="text" class="textBox" />
                 </td>
             </tr>
             <tr>
@@ -26,13 +26,13 @@
                     Stdkgtonslan
                 </td>
                 <td class="itemcellValue">
-                    <input id="Stdkgtonslan" name="Name" type="text" class="textBox" />
+                    <input id="Stdkgtonslan" name="Stdkgtonslan" type="text" class="textBox" />
                 </td>
                 <td class="itemcell" id="lbl4">
                     Calibre
                 </td>
                 <td class="itemcellValue">
-                    <input id="Calibre" name="Description" type="text" class="textBox" />
+                    <input id="Calibre" name="Calibre" type="text" class="textBox" />
                 </td>
             </tr>
 
