--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Home/Index.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
                  if (this.id == "mnAddTool") {
                      location.href = "@Url.Action("Index","Tool")";
                  }
-                 if (this.id == "mnFindTool") {
-                     location.href = "@Url.Action("Find","Tool")";
+                 if (this.id == "mnToolReport") {
+                     location.href = "http://localhost:37060/";
                  }
                  if (this.id == "mnCreateTool") {
                      location.href = "@Url.Action("Index","Catalog")";
@@ -69,27 +69,13 @@
     </li>
     <li>
         <div class='mbtn'>
-            <table id="mnFindTool">
-                <tr>
-                    <td>
-                        <img alt="Puntas" height="50" src='images/Punta_368x310_10041164e0bcba6.jpg' width="50" />
-                    </td>
-                    <td>
-                        Buscar 
-                    </td>
-                </tr>
-            </table>
-        </div>
-    </li>
-     <li>
-        <div class='mbtn'>
             <table id="mnCreateTool">
                 <tr>
                     <td>
                         <img alt="Catalogo" height="50" src='images/Punta_368x310_10041164e0bcba6.jpg' width="50" />
                     </td>
                     <td>
-                        Catalogo 
+                        Catalogo
                     </td>
                 </tr>
             </table>
@@ -97,18 +83,19 @@
     </li>
     <li>
         <div class='mbtn'>
-            <table id="mnTestView">
+            <table id="mnToolReport">
                 <tr>
                     <td>
                         <img alt="Puntas" height="50" src='images/Punta_368x310_10041164e0bcba6.jpg' width="50" />
                     </td>
                     <td>
-                        TestView
+                        Reporte 
                     </td>
                 </tr>
             </table>
         </div>
     </li>
-   
+    
+    
 </ul>
 </div>
