--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/PartialFilter.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/PartialFilter.cshtml
@@ -1,5 +1,15 @@
 ﻿ 
-
+<style>
+    #btnBuscar {
+        background-image: url(/Content/TenarisIcons/icon_search.png);
+         background-repeat:no-repeat;
+         background-size:16px;
+         margin-top:5px; 
+         width:150px; 
+         font-size:10pt;
+         font-weight:bold;
+    }
+</style>
 
 <!-- Row de Fecha y y Turno *******************  Zona de Búsqueda de la Producción  ************************** -->
 
@@ -40,11 +50,11 @@
     </div>
 }
 <!--  ROW del botón  ***********************************************************                 -->
-<div class="row" style="border:1px solid #000; margin-top:1px; margin-bottom:1px">
+<div class="row Tenaris" style="border:1px solid #000; margin-top:1px; margin-bottom:1px">
 
     <div class="form-group">
         <div class="col-sm-6" style=" padding-bottom:5px">
-            <input id="btnBuscar" type=button value="Buscar" class="csbutton" style="background-image: url(/Content/TenarisIcons/icon_search.png); margin-top:5px; width:130px; font-size:10pt;" />                        
+            <input id="btnBuscar" type=button value="Buscar" class="csbutton" />                        
         </div>
     </div>
 
