--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialDetails.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialDetails.cshtml
@@ -1,19 +1,24 @@
 ﻿@model Tenaris.Tamsa.HRM.Fat2.WebTools.Models.Tool_vm
 @{
     Layout = null;
+    int ColsControls = ViewBag.numCols;
+    int index = 0;
 }
 <script src="~/Scripts/jquery-1.8.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 <style>
-    #dvfrmElements {
-        border: 1px solid #000;
-        margin-top: 1px;
-        margin-bottom: 1px;
-        margin-left: auto;
-        margin-right: auto;
-        width: 600px;
+      #dvfrmElements {
+        border:1px solid #000; 
+        margin-top:1px; 
+        margin-bottom:1px; 
+        margin-left:auto; 
+        margin-right:auto;
+        /*width:600px;*/
     }
+        #dvfrmElements input {
+            width:200px;
+        }
 </style>
 
 @using (Ajax.BeginForm("AddNew", "Tool", FormMethod.Post, new AjaxOptions { OnSuccess = "msjSuccess(data)" }, new { @id = "frmAddNew" }))
@@ -27,18 +32,37 @@
             @Html.Hidden("idCatalog", "@(ViewBag.idCatalog)")
             
             
-                @foreach(var property in Model.Properties)
-                {                
-                <tr>
+                @foreach (var property in Model.Properties)
+                {
+                    HtmlString tr1 = new HtmlString("");
+                    HtmlString tr2 = new HtmlString("");
+                    if (index == 0)
+                    {
+                        tr1 = new HtmlString("<tr>");
+
+                    }
+                    if (index == (ColsControls - 1))
+                    {
+                        tr2 = new HtmlString("</tr>");
+                    }
+                    index++;
+                    if (index == ColsControls)
+                    {
+                        index = 0;
+                    }
+                    @(tr1)
+
+
                     <td class=" itemcell">
                         @property.Name
                     </td>
                     <td class="itemcellValue">
-                        @property.Value
+                        @Html.TextBox("values", @property.Value, new { @readonly = "readonly" })
                     </td>
-                </tr>
+
+                    @(tr2)
                 }
-            
+
         </table>
     </div>
 
