--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialNewTool.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Tool/partialNewTool.cshtml
@@ -1,6 +1,8 @@
 ﻿@model IEnumerable<Tenaris.Tamsa.HRM.Fat2.DataAccess.Models.Tool_Property>
 @{
     Layout = null;
+    int ColsControls = ViewBag.numCols;
+    int index = 0;
 }
 <script src="~/Scripts/jquery-1.8.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
@@ -12,8 +14,12 @@
         margin-bottom:1px; 
         margin-left:auto; 
         margin-right:auto;
-        width:600px;
+        /*width:600px;*/
     }
+        #dvfrmElements input {
+            width:200px;
+        }
+
 </style>
 
 @using (Ajax.BeginForm("AddNew", "Tool", FormMethod.Post, new AjaxOptions { OnSuccess = "msjSuccess(data)" }, new { @id="frmAddNew" }))
@@ -24,17 +30,38 @@
     <div class="row" id="dvfrmElements">
         <table style="width: 100%; border-spacing: 2px;" class="tableData">
                 @Html.Hidden("idCatalog","@(ViewBag.idCatalog)")
+            
                 @foreach (var property in Model)
                 {
-                    <tr>
-                        <td class=" itemcell">
-                            @property.Name
-                        </td>
-                        <td class="itemcellValue">
-                            @Html.TextBox(property.idProperty.ToString())
-                        </td>
-                    </tr>
+                     HtmlString tr1 = new HtmlString("");
+                        HtmlString tr2 = new HtmlString(""); 
+                    if (index == 0)
+                    {
+                       tr1 = new HtmlString("<tr>");
+                       
+                    }
+                    if (index == (ColsControls-1))
+                    {                        
+                        tr2 = new HtmlString("</tr>");
+                    }
+                    index++;
+                    if(index == ColsControls)
+                    {
+                        index = 0;
+                    }
+                     @(tr1)
+   
+
+        <td class=" itemcell">
+            @property.Name
+        </td>
+        <td class="itemcellValue">
+            @Html.TextBox(property.idProperty.ToString())
+        </td>
+    
+                    @(tr2)
                 }
+              
             </table>
         </div>
     
@@ -60,7 +87,9 @@
 
             $.datepicker.setDefaults($.datepicker.regional['es-MX']);
 
-            $("#iProperty5").datepicker();
+            $("[name='5']").val("@(DateTime.Now.ToString("dd/MM/yyy"))");
+            $("[name='5']").datepicker();
+            $("[name='1']").autocomplete({source : ["SS","TI","AA"]});
             $('#ui-datepicker-div').wrap('<div class="Tenaris"></div>');
             $('#btnCancel').button().click(function () {
                 $("#DivToAppendPartialView").dialog("close");
