--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Shared/_Layout.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Shared/_Layout.cshtml
@@ -78,6 +78,7 @@
             @RenderBody()
         </section>
     </div>
+    <div class="gmodal"><!-- Place at bottom of page --></div>
     <footer>
         <div class="content-wrapper">
             <div class="float-left">
