--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Content/Site.css
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Content/Site.css
@@ -14,6 +14,29 @@ body {
     padding: 0;    
 }
 
+.gmodal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba( 255, 255, 255, .8 ) url('themes/base/images/ajax-loader.gif') 50% 50% no-repeat;    
+}
+
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+body.loading {
+    overflow: hidden;   
+}
+
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+body.loading .gmodal {
+    display: block;
+}
+
 a {
     color: #333;
     outline: none;
