--- a/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Supplier/PartialFilter.cshtml
+++ b/Tenaris.Tamsa.HRM.Fat2.WebTools/Views/Supplier/PartialFilter.cshtml
@@ -1,38 +1,48 @@
 ﻿ 
-
+<style>
+    #btnBuscar {
+        background-image: url(/Content/TenarisIcons/icon_search.png);
+         background-repeat:no-repeat;
+         background-size:16px;
+         margin-top:5px; 
+         width:150px; 
+         font-size:10pt;
+         font-weight:bold;
+    }
+</style>
 
 <!-- Row de Fecha y y Turno *******************  Zona de Búsqueda de la Producción  ************************** -->
 
-@using (Html.BeginForm("Search", "Catalog", FormMethod.Post, new { @name = "frmSearch", @id="frmSearch" }))
+@using (Html.BeginForm("Search", "Tool", FormMethod.Post, new { @name = "frmSearch", @id="frmSearch" }))
 {
     <div class="row" style="border:1px solid #000; margin-top:1px; margin-bottom:1px">
         <table style="width: 100%; border-spacing: 2px;" class="tableData">
             <tr>
                 <td class="itemcell" id="lbl1">
-                    Tipo
+                    Matricula
                 </td>
                 <td class="itemcellValue">
-                    <input id="Type" name="Type" type="text" class="textBox numericOnly" />
+                    <input id="Tag" name="Tag" type="text" class="textBox" />
                 </td>
                 <td class="itemcell" id="lbl2">
-                    Codigo
+                    Estado
                 </td>
                 <td class="itemcellValue">
-                    <input id="Code" name="Code" type="text" class="textBox" />
+                    <input id="Status" name="Status" type="text" class="textBox" />
                 </td>
             </tr>
             <tr>
                 <td class="itemcell" id="lbl3">
-                    Nombre
+                    Stdkgtonslan
                 </td>
                 <td class="itemcellValue">
-                    <input id="Name" name="Name" type="text" class="textBox" />
+                    <input id="Stdkgtonslan" name="Stdkgtonslan" type="text" class="textBox" />
                 </td>
                 <td class="itemcell" id="lbl4">
-                    Descripcion
+                    Calibre
                 </td>
                 <td class="itemcellValue">
-                    <input id="Description" name="Description" type="text" class="textBox" />
+                    <input id="Calibre" name="Calibre" type="text" class="textBox" />
                 </td>
             </tr>
 
@@ -40,11 +50,11 @@
     </div>
 }
 <!--  ROW del botón  ***********************************************************                 -->
-<div class="row" style="border:1px solid #000; margin-top:1px; margin-bottom:1px">
+<div class="row Tenaris" style="border:1px solid #000; margin-top:1px; margin-bottom:1px">
 
     <div class="form-group">
         <div class="col-sm-6" style=" padding-bottom:5px">
-            <input id="btnBuscar" type=button value="Buscar" class="csbutton" style="background-image: url(/Content/TenarisIcons/icon_search.png); margin-top:5px; width:130px; font-size:10pt;" />                        
+            <input id="btnBuscar" type=button value="Buscar" class="csbutton" />                        
         </div>
     </div>
 
@@ -59,7 +69,7 @@
     $('#btnBuscar').button().click(function () {
         $("#frmSearch").submit();
     });
-    $(".numericOnly").keyup(function () {
+    $("#Type").keyup(function () {
         if (this.value != this.value.replace(/[^0-9\.]/g, '')) {
             this.value = this.value.replace(/[^0-9\.]/g, '');
         }
